--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "next": "14.2.4",
+    "openai": "^4.52.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1"
